--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,12 +1,14 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Reddit support
-    url: https://www.reddit.com/r/RetroArcher
-    about: Ask questions about RetroArcher on Reddit
   - name: Discord support
     url: https://discord.gg/d6MpcrbYQs
     about: Ask question about RetroArcher in Discord
-#
-#  - name: Feature suggestions
-#    url: https://ombifeatures.featureupvote.com
-#    about: Share your suggestions or ideas to make Ombi better!
+  - name: Reddit support
+    url: https://www.reddit.com/r/RetroArcher
+    about: Ask questions about RetroArcher on Reddit
+  - name: Facebook support
+    url: https://www.facebook.com/groups/retroracher
+    about: Ask question about RetroArcher on Facebook
+  - name: Feature request
+    url: https://retroarcher.featureupvote.com/
+    about: Share your suggestions or ideas to make RetroArcher better!
