--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -10,5 +10,5 @@ contact_links:
     url: https://www.facebook.com/groups/retroracher
     about: Ask question about RetroArcher on Facebook
   - name: Feature request
-    url: https://retroarcher.featureupvote.com/
+    url: https://retroarcher.github.io/featurereq
     about: Share your suggestions or ideas to make RetroArcher better!
