--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -50,4 +50,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: RetroArcher.bundle
-          path: *
+          path: /**
