--- a/Contents/Libraries/Shared/requirements.txt
+++ b/Contents/Libraries/Shared/requirements.txt
@@ -1,4 +1,5 @@
-igdb-api-v4==0.0.5  # version 0.0.4 had f-strings which are incompatible with Python 2.7
+#igdb-api-v4==0.0.5  # version 0.0.4 had f-strings, version 0.0.5 has incompatible type hints
+git+https://github.com/twitchtv/igdb-api-python.git@e03c2f08f66d6935087a89afa8be026586cf5631#igdb-api-v4  # minimum commit to use
 #PlexAPI==4.2.0  # modified version to support Python 2.7 AND uploading theme songs, wait until https://github.com/pkkid/python-plexapi/pull/864 is merged/released before modifying again
 requests<=2.27  # 2.27 is last version supporting Python 2.7
 rsa==4.7
