--- a/Contents/Libraries/Shared/requirements.txt
+++ b/Contents/Libraries/Shared/requirements.txt
@@ -1,5 +1,6 @@
+git+https://github.com/PyArcher/plexagents.git#egg=plexagents
 #igdb-api-v4==0.0.5  # version 0.0.4 had f-strings, version 0.0.5 has incompatible type hints
-git+https://github.com/twitchtv/igdb-api-python.git@e03c2f08f66d6935087a89afa8be026586cf5631#igdb-api-v4  # minimum commit to use
+git+https://github.com/twitchtv/igdb-api-python.git@e03c2f08f66d6935087a89afa8be026586cf5631#egg=igdb-api-v4  # minimum commit to use
 nop==0.1.1
 #PlexAPI==4.2.0  # modified version to support Python 2.7 AND uploading theme songs, wait until https://github.com/pkkid/python-plexapi/pull/864 is merged/released before modifying again
 requests<=2.27  # 2.27 is last version supporting Python 2.7
