--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -54,5 +54,5 @@ jobs:
         if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: actions/upload-artifact@v2
         with:
-          name: RetroArcher.bundle
+          name: ${{ github.repository }}
           path: /**
