--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Package Windows
         run: |
-          7z a RetroArcher.bundle.zip *
+          7z a RetroArcher.bundle.zip * -x .git *.pyc *__pycache__*
 
       - name: Upload Artifacts
         if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
