--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -10,8 +10,12 @@ on:
 
 jobs:
   build-windows:
+    strategy:
+      matrix:
+        fail-fast: false
+        os: [windows-2019, ubuntu-20.04, macos-10.15]
 
-    runs-on: windows-2019
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
@@ -55,16 +59,16 @@ jobs:
           python --version
           python Contents\Code\retroarcher\retroarcher.py
 
-      - name: Package Windows
+      - name: Package
         run: |
-          7z a ‘-x!*.git’ ‘-x!*.pyc’ ‘-x!*__pycache__*’ RetroArcher.bundle.zip *
+          7z a ‘-xr!.git’ ‘-xr!*.pyc’ ‘-xr!__pycache__’ RetroArcher.bundle-${{ runner.os }}.zip *
 
       - name: Upload Artifacts
         if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: actions/upload-artifact@v2  # https://github.com/actions/upload-artifact
         with:
-          name: RetroArcher.bundle
-          path: RetroArcher.bundle.zip
+          name: RetroArcher.bundle-${{ runner.os }}
+          path: RetroArcher.bundle-${{ runner.os }}.zip
 
       - name: Parse Changelog Entry
         if: ${{ github.ref == 'refs/heads/master' }}
