--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -62,14 +62,14 @@ jobs:
       - name: Package
         run: |
           cd ..
-          7z "-xr!*.git" "-xr!*.pyc" "-xr!__pycache__" a "RetroArcher.bundle-${{ runner.os }}.zip" "RetroArcher.bundle"
+          7z "-xr!*.git" "-xr!*.pyc" "-xr!__pycache__" a "./RetroArcher.bundle/RetroArcher.bundle-${{ runner.os }}.zip" "RetroArcher.bundle"
 
       - name: Upload Artifacts
         if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: actions/upload-artifact@v2  # https://github.com/actions/upload-artifact
         with:
           name: RetroArcher.bundle-${{ runner.os }}
-          path: ../RetroArcher.bundle-${{ runner.os }}.zip
+          path: RetroArcher.bundle-${{ runner.os }}.zip
 
       - name: Parse Changelog Entry
         if: ${{ github.ref == 'refs/heads/master' }}
@@ -99,7 +99,7 @@ jobs:
         with:
           name: Release ${{ steps.changelog.outputs.version }}
           tag: ${{ steps.changelog.outputs.version }}
-          artifacts: "../RetroArcher.bundle-${{ runner.os }}.zip"
+          artifacts: "*.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdated: true
           body: ${{ steps.changelog.outputs.description }}
