--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -80,11 +80,10 @@ jobs:
           python ./Contents/Code/retroarcher/retroarcher.py
 
       - name: Setup Artifact Path
-        shell: powershell
+        shell: pwsh
         run: |
           cd ..
-          Move-Item "RetroArcher.bundle" "Artifacts"
-          Move-Item "Artifacts" "RetroArcher.bundle/RetroArcher.bundle"
+          Move-Item "./*" "RetroArcher.bundle/"
 
       - name: Upload Artifacts
         if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
