--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -95,9 +95,9 @@ jobs:
           if-no-files-found: error  # 'warn' or 'ignore' are also available, defaults to `warn`
           path: |
             ${{ github.workspace }}
-            !**.git*
-            !**.pyc
-            !**__pycache__
+            !**/*.git*
+            !**/*.pyc
+            !**/__pycache__
 
       - name: Package Release
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
