--- a/.github/workflows/create_package.yml
+++ b/.github/workflows/create_package.yml
@@ -112,5 +112,5 @@ jobs:
           tag: ${{ needs.check_changelog.outputs.next_version }}
           artifacts: "*.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
-          allowUpdated: true
+          allowUpdates: true
           body: ${{ needs.check_changelog.outputs.release_body }}
